# llm-bdi-pipeline

./: .env.example  .gitignore  .gitmodules  ANALYSIS_3_BLOCKS_ISSUE.md  BACKWARD_SEARCH_REFACTORING_SUMMARY.md  DFA_SIMPLIFIER_TEST_REPORT.md  DNF_CACHE_ANALYSIS.md  DOT_STRING_EXAMPLES.md  IMPLEMENTATION_ANALYSIS.md  INTEGRATION_COMPLETE.md  LTLF2DFA_INTEGRATION.md  MERGE_SUMMARY.md  NEGATIVE_GOAL_VERIFICATION_SUMMARY.txt  PIPELINE-BOUNDARY-AND-STATUS.md  PIPELINE_ASSUMPTIONS.md  PIPELINE_TARSKI_VERIFICATION.md  PREDICATE_CACHE_IMPLEMENTATION.md  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  STRESS_TEST_REPORT.md  TARSKI_INTEGRATION_SUMMARY.md  TERMINATION_ISSUE_ANALYSIS.md  TO-DO-LIST.md  VARIABLE_CAP_PRUNING_FIX.md  VARIABLE_EXPLOSION_ANALYSIS.md  analyze_generated_code.py  coverage.xml  debug_constraint_collection.py  debug_test.py  detailed_pruning_stats.py  diagnose_pruning.py  elapsed.time  fix_stage3_tests.py  main.py  monitor_pruning.py  output.sas  plan.md  pyproject.toml  (+25 more)
docs/: ABSTRACT_OPERATIONS_EXAMPLE.md  CODE_WEAKNESSES_ANALYSIS.md  CRITICAL_DESIGN_ISSUES.md  DESIGN_REVIEW_PHASE3.md  DESIGN_REVIEW_SYSTEMATIC.md  FOL_BASED_LIFTED_PLANNING.md  IMPLEMENTATION_ISSUES_AND_FIXES.md  LIFTED_PLANNING_REFACTOR.md  QUANTIFIER_IMPLEMENTATION_STATUS.md  WEAKNESS_FIXES_SUMMARY.md  bdd_shannon_expansion_tutorial.md  constant_variable_distinction_analysis.md  dd_autoref_bdd_correct_traversal.md  dfa_boolean_operators_formal_methods.md  dfa_simplification_design.md  dfa_simplification_usage.md  file_order.md  graph_direction_clarification.md  (+22 more)
(+447 files in other folders)
