[project]
name = "llm-bdi-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dd>=0.6.0",
    "lark>=1.1.9",
    "openai>=2.6.0",
    "pyperplan>=2.1",
    "ltlf2dfa>=1.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-pptx>=1.0.2",
]
